Add dialog PWA functionality and browser check
Added the ability for Dialog to install app as a PWA on all platforms.
Added a browser check to ensure that the app is only installed on
supported browsers: Safari, Brave, Edge and Google Chrome.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <meta name="description" content="This is an app created for the Hyphonix (HX) community 
   to assist with skits and make them easier to execute">
 
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+
   <link rel="icon" href="/favicons/favicon-16x16.png" sizes="16x16">
   <link rel="icon" href="/favicons/favicon-32x32.png" sizes="32x32">
 
